# Lab-06-EX-10

./: CMakeLists.txt  Makefile  Software  catalogo.txt  usuarios.txt
Include/: Catalogo.h  Libro.h  Sala.h  Sofware.h  Usuario.h
src/: Catalogo.cc  Catalogo.h  Libro.cc  Libro.h  Sala.cc  Software.cc  Sofware.h  Usuario.cc  Usuario.h  practica06_main.cc
